@@ -43,6 +43,27 @@
             </ul>
           </li>
         </ul>
+
+        <ul class="nav navbar-nav navbar-right" style="margin-right: 0;">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Export <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li role="presentation">
+                <a href="#" onclick="chooseFile('#importFileDialog', loadData); return false;">
+                  <span class="glyphicon glyphicon-folder-open menu-icon"></span> Import Data
+                </a>
+                <input style="display:none;" id="importFileDialog" type="file" />
+              </li>
+              <li role="presentation" class="disabled" id="exportbtn">
+                <a href="#" onclick="chooseFile('#exportFileDialog', saveData); return false;">
+                  <span class="glyphicon glyphicon-floppy-save menu-icon"></span> Export Data
+                </a>
+                <input style="display:none;" id="exportFileDialog" type="file" nwsaveas="procpath.export" />
+              </li>
+            </ul>
+          </li>
+        </ul>
+
       </div>
 
     </div>
